# rust_rocket_crud_demo

./: Cargo.toml
blog-server/: Cargo.toml  Rocket.toml
blog-server/md/8ed79c68-7289-44e5-8a82-6264b7757a37/: 2e6269a4-6a22-434b-bdc4-bd534e07d74f.md  728875a1-0d9c-42fa-898a-e105d58cb95a.md
blog-server/src/: Rocket.toml  auth.rs  catcher.rs  data_types.rs  db_service.rs  lib.rs  main.rs
blog-server/src/article/: db_service.rs  mod.rs  route.rs
blog-server/src/auth/: db_service.rs  fairing.rs  mod.rs  route.rs  token.rs  validate.rs
blog-server/src/config/: mod.rs
blog-server/src/db/: mod.rs
blog-server/src/log/: mod.rs
blog-server/src/md/8ed79c68-7289-44e5-8a82-6264b7757a37/: d3307b1a-a231-4252-8a20-074e1e9d78b9.md  f9f461ee-de25-4479-a60f-5fc41403fc0b.md
blog-server/src/src/: catcher.rs  lib.rs
blog-server/src/src/article/: db_service.rs  file_operate.rs  mod.rs  route.rs
blog-server/src/src/auth/: db_service.rs  route.rs  validate.rs
blog-server/src/src/config/: mod.rs
blog-server/src/src/db/: mod.rs
blog-server/src/src/state/: mod.rs
blog-server/src/src/types/: mod.rs
blog-server/src/state/: mod.rs
blog-server/src/types/: mod.rs  rt_type.rs
blog-server/static/: 404.html
